[UPDATE] Red Neuronal y Backpropagation
[Author] Erika Sánchez-Femat

-- Se modifican los notebooks de Redes Neuronales

--- a/IV/4_backpropagation.ipynb
+++ b/IV/4_backpropagation.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.0000],\n",
-      "        [0.5205],\n",
-      "        [0.3362],\n",
+      "tensor([[0.2677],\n",
+      "        [0.7497],\n",
+      "        [1.0575],\n",
       "        [0.0000],\n",
-      "        [0.0000]], grad_fn=<ReluBackward0>)\n"
+      "        [1.1136]], grad_fn=<ReluBackward0>)\n"
      ]
     }
    ],
@@ -58,17 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.1348],\n",
+      "        [0.0000],\n",
+      "        [0.0000],\n",
+      "        [0.3804],\n",
+      "        [0.0000]], grad_fn=<ReluBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "class SimpleModel(nn.Module):\n",
+    "class SimpleModelBackProp(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(SimpleModel, self).__init__()\n",
+    "        super(SimpleModelBackProp, self).__init__()\n",
     "        self.linear = nn.Linear(10, 1)  # Capa lineal de 10 a 1\n",
     "    \n",
     "    def forward(self, x):\n",
@@ -81,7 +93,7 @@
     "targets = torch.randn(5, 1)  # 5 objetivos\n",
     "\n",
     "# Instanciamos el modelo\n",
-    "model = SimpleModel()\n",
+    "model = SimpleModelBackProp()\n",
     "\n",
     "# Definimos la función de pérdida\n",
     "criterion = nn.MSELoss()\n",
@@ -98,7 +110,17 @@
     "# Backward pass\n",
     "optimizer.zero_grad()  # Reiniciamos los gradientes del optimizador\n",
     "loss.backward()        # Calculamos los gradientes\n",
-    "optimizer.step()       # Actualizamos los parámetros del modelo\n"
+    "optimizer.step()       # Actualizamos los parámetros del modelo\n",
+    "\n",
+    "# Datos de entrada\n",
+    "inputs = torch.randn(5, 10)  # 5 ejemplos, 10 características cada uno\n",
+    "\n",
+    "# Instanciamos el modelo\n",
+    "model = SimpleModelBackProp()\n",
+    "\n",
+    "# Forward pass\n",
+    "outputs = model(inputs)\n",
+    "print(outputs)\n"
    ]
   },
   {
@@ -110,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-ml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -363,5 +385,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
